--- a/pages/project.html
+++ b/pages/project.html
@@ -67,14 +67,14 @@
                   <h2>ALUMNI</h2>
                 </a>
               </div>
-              <!--<div class="swiper-slide">
+              <div class="swiper-slide">
                 <a href="./ramle.html">
                   <div class="img-01">
                   <img class="slider-img" src="../images/ramle.jpg" alt="">
                 </div>
                   <h2>RAMLE TRAITEUR</h2>
                 </a>
-              </div>-->
+              </div>
             </div>
             <div id="next">
             <input class="swiper-button-next btn btnNext" id="nextbtn"/>
