--- a/pages/ramle.html
+++ b/pages/ramle.html
@@ -39,7 +39,7 @@
       <div class="projectDet-container1">
         <h4>PROJET</h4>
         <ul>
-          <li>Gestion de projet</li>
+          <li>UI UX Design</li>
           <li>Desgin graphique</li>
           <li>Événementiel</li>
         </ul>
@@ -48,7 +48,7 @@
         <h4>SOFTWARES</h4>
         <ul>
           <li>Trello</li>
-          <li>Google Drive</li>
+          <li>Figma</li>
           <li>Suite Adobe</li>
         </ul>
       </div>
@@ -56,42 +56,56 @@
     <div class="description">
       <h4>DESCRIPTION</h4>
       <p>
-        L'Université de Toulon, à travers son Service des Relations Internationales (SRI), a organisé un événement Alumni pour renforcer les liens entre les anciens et les nouveaux étudiants, tout en améliorant la visibilité et la réputation de l'université. Cet événement s'inscrit dans le cadre de l'obtention du label "Bienvenue en France", visant à promouvoir une expérience enrichissante pour les étudiants internationaux.
+        Le projet "Ramle Traiteur" incarne une collaboration réalisée dans le cadre de mon stage au sein d'une société de traiteur réputée. De la refonte graphique à la conception de la maquette jusqu'au développement du site web, ainsi que la création d'éléments print tels qu'un kakémono, ce projet était une immersion totale dans le monde de la conception et du développement web.
       </p>
       <div class="proMoreDet">
-        <img class="borderblue" src="../images/affichesri.jpg" alt="">
-        <h4>RÔLES ET RESPOSABILITES</h4>
+        <img class="borderbrown" src="../images/ramlemockup1.jpg" alt="">
+        <h4>REFONTE IDENTITE VISUELLE</h4>
       <p>
-        En tant que chef de projet digital et designer graphique, j'ai dirigé la conception graphique du projet, développant la charte graphique, le logo et les supports de communication tels que les affiches et les éléments numériques. J'ai également coordonné l'équipe projet, assurant la gestion et la répartition efficace des tâches pour répondre aux objectifs fixés.
+        L'objectif initial était de moderniser l'image de marque de "Ramle Traiteur" tout en respectant son héritage et ses valeurs. Nous avons entamé le processus par une analyse approfondie de l'identité visuelle existante, mettant en lumière les éléments à conserver et ceux à actualiser. Cette phase a abouti à une refonte complète, englobant le logo, les couleurs, les typographies et les éléments graphiques.
       </p>
-      <h4>STRATEGIE DE COMMUNICATION</h4>
+      <h4>CONCEPTION UI UX</h4>
       <p>
-        Le projet a débuté en mettant en place une identité visuelle distinctive, en parfaite harmonie avec les valeurs de notre université. Nous avons fait le choix de nuances de bleu associées à une touche d'orange pour notre logo, ainsi que l'utilisation de polices claires et modernes afin d'assurer une communication visuelle cohérente. La mise en œuvre de cette identité s'est étendue à la création de supports promotionnels et à la gestion logistique de tous les aspects de notre événement.
-      </br> </br>
-        Pour maximiser la portée de notre initiative, nous avons adopté une approche de communication mixte, alliant les outils numériques aux méthodes traditionnelles. Cela s'est concrétisé par des actions en ligne, diffusées à travers les réseaux sociaux du Service des Relations Internationales (SRI), ainsi que par la distribution stratégique d'affiches sur nos différents campus. Face à des défis tels que la conformité au RGPD, nous avons répondu par des solutions créatives et un ciblage efficace, à la fois à travers des communications directes et indirectes.
-      </p>
+        Une fois l'identité visuelle définie, j'ai pu me concentrer sur la conception de l'interface utilisateur et de l'expérience utilisateur du site web. Mon objectif était de créer un site web moderne, intuitif et élégant qui refléterait la nouvelle image de marque de Ramle Traiteur.
+      </p>  
+      <p><strong>Processus de conception :</strong></p>
+      <ul>
+        <li><strong>Ébauches et wireframes :</strong> J'ai commencé par créer des croquis et des wireframes pour définir la structure et l'organisation du contenu du site web. Cette étape m'a permis de tester différentes idées et de recueillir des commentaires avant de passer à la phase de conception visuelle.
+        </li></br></br>
+        <li><strong>Maquettes et prototypes :</strong> Ensuite, j'ai créé des maquettes et des prototypes haute fidélité pour affiner le design et l'ergonomie du site web. Les prototypes m'ont permis de simuler l'expérience utilisateur et de tester la navigation du site web.</li></br></br>
+        <li><strong>Tests et itérations :</strong> J'ai réalisé des tests d'utilisabilité avec des utilisateurs réels pour identifier les points d'amélioration et apporter les modifications nécessaires. Ce processus itératif m'a permis de créer un site web répondant aux besoins et aux attentes des utilisateurs.</li></br>
+      </ul> 
       </div>
 
       <div class="proMoreDet">
-        <img class="borderblue" src="../images/bentoalumni.jpg" alt="">
-        <h4>RETOUR SUR EXPERIENCE</h4>
+        <img class="borderbrown" src="../images/ramleidd.jpg" alt="">
+        <h4>DEVELOPPEMENT WEB</h4>
       <p>
-        L'événement a été un succès, avec une participation active des étudiants et un renforcement notable des relations Alumni. Ce projet a non seulement amélioré ma capacité à gérer des projets d'envergure mais aussi renforcé mes compétences en communication visuelle et événementielle. Les retours ont été extrêmement positifs, démontrant l'impact significatif de l'événement sur la communauté universitaire et ouvrant la voie à de futures initiatives similaires.
+        J'ai développé le site web en utilisant des technologies modernes et performantes, telles que HTML5, CSS3 et JavaScript. J'ai également utilisé un CMS (Content Management System) pour permettre à l'équipe de Ramle Traiteur de gérer facilement le contenu du site web.
       </div>
-      <a href="../images/CDC_REACO_ALUMNI.pdf">
-        <h3>
-            VOIR LE CAHIER DES CHARGES
-        </h3>
-        <img src="../images/arrow.png" alt="">
-        <!-- <i class='bx bx-up-arrow-alt'></i> -->
-      </a>
+
+      <div class="proMoreDet">
+        <h4>ELEMENTS PRINT</h4>
+      <p>
+        En plus du site web, j'ai également créé d'autres éléments print pour promouvoir la nouvelle identité visuelle de "Ramle Traiteur".
+      </p>
+      <ul>
+        <li><strong>Cartes de visite :</strong> J'ai conçu des cartes de visite élégantes et modernes reprenant les codes graphiques du site web. Les cartes de visite incluent le logo de l'entreprise, les informations de contact et les réseaux sociaux.
+        </li></br></br>
+        <li><strong>Brochures :</strong> J'ai créé des brochures présentant les différents services de traiteur proposés par "Ramle Traiteur". Les brochures sont imprimées sur du papier de haute qualité et incluent des photos appétissantes des plats et des buffets.</li></br></br>
+        <li><strong>Kakémonos :</strong> Pour une présence visuelle impactante lors d'événements ou de salons professionnels, j'ai conçu un kakémono. Ce support de communication vertical mets en avant les differents services proposés.</li></br>
+      </ul> 
+    </br></br>
+      <img class="borderbrown" src="../images/ramleprint.jpg" alt="">
+      </div>
+
     </div>
     <div id="bottBorder"></div>
     <span class="span">PROJET SUIVANT</span>
     
     <div class="bottomtxt">
-      <a href="./sachassou.html">
-        <h1 class="bottHead">ALUMNI</h1>
+      <a href="./lasalle.html">
+        <h1 class="bottHead">LASALLE</h1>
    <span class="span1">
     <img src="../images/red-arrow.png" alt="">
    </span>
