--- a/pages/Vinyle.html
+++ b/pages/Vinyle.html
@@ -72,7 +72,7 @@
         <h4>REFLEXION</h4>
       <p>
        
-        Ce projet a été une occasion de développer une interface attrayante qui répond aux besoins spécifiques des amateurs de vinyles. 'Vinyl Records' illustre mon approche du design web qui allie esthétique et fonctionnalité. Les retours obtenus lors de la présentation du projet ont validé le choix des technologies implémentées et ont ouvert la voie à d'éventuelles améliorations futures.
+        Ce projet a été une occasion de développer une interface attrayante qui répond aux besoins spécifiques des amateurs de vinyles. 'Vinyl Records' illustre mon approche du design web qui allie esthétique et fonctionnalité. Les retours obtenus lors de la présentation du projet ont validé nos choix et ont ouvert la voie à d'éventuelles améliorations futures.
 
       </p>
       </div>
