--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <!--<img src="./images/logo.svg" alt="">-->
         </a>
             <ul class="links">
-              <li><a href="./index.html"  class="active">HOME<div></div></a></li>
-              <li><a href="./pages/project.html">PROJECTS</a></li>
+              <li><a href="./index.html"  class="active">ACCUEIL<div></div></a></li>
+              <li><a href="./pages/project.html">PROJETS</a></li>
               <li><a href="./pages/propos.html">À PROPOS</a></li>
             </ul>
         </div>
