--- a/pages/project.html
+++ b/pages/project.html
@@ -18,10 +18,10 @@
             <!--<img src="./images/logo.svg" alt="">-->
         </a>
             <ul class="links">
-              <li><a href="../index.html">HOME</a></li>
-              <li><a href="./project.html" class="active">PROJECTS<div></div></a></li>
-              <li><a href="./propos.html">À PROPOS</a></li>
-            </ul>
+            <li><a href="../index.html">ACCUEIL</a></li>
+            <li><a href="./project.html" >PROJETS</a></li>
+            <li><a href="./propos.html">À PROPOS</a></li>
+          </ul>
         </div>
     </header>
     <div class="projects">
