--- a/pages/propos.html
+++ b/pages/propos.html
@@ -17,10 +17,10 @@
           <!--<img src="../images/logo.svg" alt="">-->
         </a>
             <ul class="links">
-                <li><a href="../index.html">HOME</a></li>
-                <li><a href="./project.html">PROJECTS </a></li>
-                <li><a href="./propos.html" class="active">À PROPOS <div></div></a></li>
-            </ul>
+            <li><a href="../index.html">ACCUEIL</a></li>
+            <li><a href="./project.html" >PROJETS</a></li>
+            <li><a href="./propos.html">À PROPOS</a></li>
+          </ul>
         </div>
     </header>
     <div class="main-container">
