--- a/pages/alumni.html
+++ b/pages/alumni.html
@@ -91,7 +91,7 @@
     
     <div class="bottomtxt">
       <a href="./lasalle.html">
-        <h1 class="bottHead">LASALLE</h1>
+        <h1 class="bottHead">RAMLE</h1>
    <span class="span1">
     <img src="../images/red-arrow.png" alt="">
    </span>
