--- a/pages/alumni.html
+++ b/pages/alumni.html
@@ -90,7 +90,7 @@
     <span class="span">PROJET SUIVANT</span>
     
     <div class="bottomtxt">
-      <a href="./lasalle.html">
+      <a href="./ramle.html">
         <h1 class="bottHead">RAMLE</h1>
    <span class="span1">
     <img src="../images/red-arrow.png" alt="">
