--- a/pages/project.html
+++ b/pages/project.html
@@ -27,6 +27,14 @@
     <div class="projects">
         <div class="swiper mySwiper">
             <div class="swiper-wrapper" id="parant">
+                <div class="swiper-slide">
+                <a href="./Fleet.html">
+                  <div class="img-01">
+                  <img class="slider-img" src="../images/fleet.jpg" alt="">
+                </div>
+                  <h2>FLEET</h2>
+                </a>
+              </div>
               <div class="swiper-slide">
                 <a href="./lasalle.html">
                   <div class="img-01">
