--- a/pages/Fleet.html
+++ b/pages/Fleet.html
@@ -17,8 +17,8 @@
           <!--<img src="../images/logo.svg" alt="">-->
         </a>
           <ul class="links">
-            <li><a href="../index.html">HOME</a></li>
-            <li><a href="./project.html" >PROJECTS</a></li>
+            <li><a href="../index.html">ACCUEIL</a></li>
+            <li><a href="./project.html" >PROJETS</a></li>
             <li><a href="./propos.html">À PROPOS</a></li>
           </ul>
       </div>
